# Helixir

./: .gitignore  AGENTS.md  GLOSSARY.md  LICENSE  Makefile  README.md  UPGRADING.md  helix.toml  install.sh
helixir/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  helixir-agent-activity.jsonl  memory-charter.md
helixir/.github/workflows/: release.yml
helixir/diagrams/: c4_context.d2  c4_context_v2.d2  component.d2  component_v2.d2  dataflow.d2  dataflow_v2.d2  sequence.d2  sequence_v2.d2  userflow.d2  userflow_v2.d2
helixir/doc/: README.md  architecture.md  changes-2026-06-audit-cleanup.md  changes-2026-06-moira-agents.md  codebase-audit.md  data-model.md  dataflow.md  design-rationale.md  duplication-audit.md  retrieval-research.md  test-design.md  userflow.md
helixir/doc/v0.10.0/: notes.md
helixir/doc/v0.11.0/: notes.md
helixir/doc/v0.12.0/: notes.md
helixir/doc/v0.13.0/: notes.md
helixir/doc/v0.13.1/: notes.md
helixir/doc/v0.13.2/: notes.md
helixir/doc/v0.3.1-fix/: notes.md  state-snapshot.md
helixir/doc/v0.4.0/: notes.md
helixir/doc/v0.4.0-pre/: notes.md
helixir/doc/v0.5.0/: notes.md
helixir/doc/v0.6.0/: notes.md
helixir/doc/v0.6.1/: notes.md
helixir/doc/v0.6.2/: notes.md
helixir/doc/v0.7.0/: notes.md
helixir/doc/v0.8.0/: notes.md
helixir/doc/v0.9.0/: notes.md
helixir/doc/v0.9.1/: notes.md
helixir/doc/v0.9.2/: notes.md
helixir/schema/: queries.hx  schema.hx
helixir/src/: lib.rs  utils.rs
helixir/src/agents/: mod.rs
helixir/src/agents/atropos/: merge.rs  mod.rs  reconcile.rs  verify.rs
helixir/src/agents/clotho/: dictionary.rs  mod.rs
helixir/src/agents/daemon/: mod.rs
helixir/src/agents/hygieia/: mod.rs
helixir/src/agents/lachesis/: mod.rs  stitch.rs
helixir/src/agents/orchestrator/: mod.rs
helixir/src/core/: cache.rs  charter.rs  config.rs  error.rs  exceptions.rs  helixir_client.rs  mod.rs  retrieval_profile.rs  search_modes.rs  time_window.rs
helixir/src/core/events/: base.rs  bus.rs  mod.rs
helixir/src/core/helixir_client/: client.rs  concepts.rs  error.rs  graph.rs  memory.rs  mod.rs  types.rs
helixir/src/core/levels/: definitions.rs  mod.rs  models.rs  utils.rs
helixir/src/core/services/: mod.rs
helixir/src/core/velocity/: controller.rs  metrics.rs  mod.rs  models.rs
helixir/src/db/: client.rs  mod.rs
helixir/src/llm/: embeddings.rs  example_guard.rs  extractor.rs  factory.rs  mod.rs  nli.rs
helixir/src/llm/decision/: engine.rs  mod.rs  models.rs  prompt.rs
helixir/src/llm/embeddings/: batch.rs  cache.rs  config.rs  error.rs  (+4 more)
helixir/src/mcp/: handler.rs  mod.rs  params.rs  prompts.rs  server.rs
helixir/src/toolkit/: mod.rs  tooling_manager.rs
helixir/tests/: atropos_capstone_e2e.rs  charter_blocking_e2e.rs  charter_false_merge_e2e.rs  charter_learning_e2e.rs  chunking_e2e.rs  clotho_alias_e2e.rs  clotho_autotag_e2e.rs  clotho_dominance_e2e.rs  concept_connect_polish_e2e.rs  concurrent_mcp_stress_e2e.rs  contradiction_debt_e2e.rs  cross_domain_bridge_e2e.rs  daemon_e2e.rs  edges_db_verified_e2e.rs  fast_commit_e2e.rs  hive_memory_e2e.rs  ingest_buffer_e2e.rs  lachesis_gate_e2e.rs  lachesis_pmi_e2e.rs  lachesis_route_subsets_e2e.rs  longest_chain_e2e.rs  mcp_full_surface_e2e.rs  mcp_ingest_e2e.rs  mcp_multi_consumer_e2e.rs  mcp_read_e2e.rs  mcp_write_e2e.rs  negative_inputs_e2e.rs  nli_antimerge_e2e.rs  nli_route_e2e.rs  ontology_classification_e2e.rs  orchestrator_e2e.rs  raw_family_e2e.rs  read_path_e2e.rs  reasoning_extraction_e2e.rs  stitch_e2e.rs  supersede_demotion_e2e.rs  swarm_e2e.rs  test_hive_queries.sh  valid_from_e2e.rs
helixir/tests/common/: golden.rs  mod.rs
helixir/tools/: extractor_bench.py  helixdb_http_bench.py  helixdb_seed_benchmark.py
(+160 files in other folders)
