[package]
name = "helixir"
version = "0.6.1"
edition = "2024"
authors = ["Nikita Rulenko (x.com/dengoslav)"]
description = "Ontological memory for LLMs - Rust implementation"
license = "MIT"
repository = "https://github.com/nikita-rulenko/Helixir"
keywords = ["ai", "memory", "llm", "graph", "mcp"]
categories = ["science", "database"]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# HelixDB official SDK
helix-rs = "0.1"

# HTTP client (for embeddings, LLM providers)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }
libc = "0.2"
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Enum utilities
strum = { version = "0.26", features = ["derive"] }

# MCP Server (Model Context Protocol)
# transport-io = stdio (per-client); transport-streamable-http-server = the
# network gateway (#42, one process per host serving many clients over HTTP).
rmcp = { version = "0.8", features = [
    "macros",
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
# HTTP host for the gateway's StreamableHttpService (rmcp pins axum 0.8).
axum = "0.8"

# Config
config = "0.14"
toml = "0.8"

# Caching
lru = "0.12"

# Lazy static initialization
lazy_static = "1.5"

# URL parsing
url = "2.5"

# Hashing (for cache keys)
sha2 = "0.10"

# Regex (for query processing, BM25)
regex = "1.11"
parking_lot = "0.12.5"

# Text chunking (semantic splitting for RAG)
text-splitter = "0.28"

# Graph data structures (for FastSync working memory)
petgraph = "0.8"

# JSON Schema (for MCP tool parameters)
schemars = "1.0"
moka = { version = "0.12.15", features = ["future"] }

# Local NLI judge (#55) — the ONNX runtime + tokenizer. Optional behind the
# `nli` feature: it pulls a heavy native dependency (`ort` needs rustc 1.88 and
# its download-binaries step doesn't link on every CI runner), and NLI is itself
# opt-in (collective/insights tier). Default builds include it; `--no-default-
# features` gives a lean core that still compiles on 1.85 and everywhere.
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"], optional = true }

# MCP (Model Context Protocol)
# TODO: Add mcp-rust-sdk when available or implement manually

[features]
default = ["nli"]
# Local contradiction-safe paraphrase backstop (DeBERTa NLI via ONNX).
nli = ["dep:ort", "dep:tokenizers"]
# Self-contained TLS for cross-compiled Linux artifacts: helix-rs pulls
# reqwest with default features (native-tls -> openssl-sys on Linux), and a
# cross container has no OpenSSL for the target. `vendored` compiles OpenSSL
# from source so the binary carries its own.
vendored-tls = ["dep:openssl"]

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "helixir"
path = "src/lib.rs"

[[bin]]
name = "helixir-mcp"
path = "src/bin/helixir_mcp.rs"

[[bin]]
name = "helixir-deploy"
path = "src/bin/helixir_deploy.rs"

[[bin]]
name = "helixir-bench"
path = "src/bin/helixir_bench.rs"

[[bin]]
name = "helixir"
path = "src/bin/helixir.rs"

